Experimental: Try exporting CIRCLE_WORKING_DIRECTORY in a different way  - https://circleci.com/docs/2.0/caching/  - Why this probably won't work: https://discuss.circleci.com/t/can-i-use-variables-in-cache-paths/11393/7

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: mvn install -DskipTests -B
       - save_cache:
           paths:
-            - $CIRCLE_WORKING_DIRECTORY
+            - {{ .Environment.CIRCLE_WORKING_DIRECTORY }}
           key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
       - save_cache:
           paths:
