--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: mvn install -DskipTests -B
       - save_cache:
           paths:
-            - {{ .Environment.CIRCLE_WORKING_DIRECTORY }}
+            - ~/project
           key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
       - save_cache:
           paths:
