--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -44,6 +44,11 @@
     </dependency>
     <dependency>
       <groupId>systems.manifold</groupId>
+      <artifactId>manifold-json</artifactId>
+      <version>0.10-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>systems.manifold</groupId>
       <artifactId>manifold-js</artifactId>
       <version>0.10-SNAPSHOT</version>
     </dependency>
