Manifold integration changes - gosu works with manifold extensions, extensions have precedence over enhancements since they modify the type directly from the type systems perspective, therefore modified some existing enhancements (URL, Bindings) to remove conflicts, note gosu does not include manifold extension libraries such as collections, io, etc. Gosu currently includes json related extensions such as those for URL, Map, and Bindings - fix some setup related changes around use of gosuc e.g., manifold jars need to be in the classpath - fix tests

--- a/gosu-ant-tools/pom.xml
+++ b/gosu-ant-tools/pom.xml
@@ -49,6 +49,18 @@
 
   <build>
     <plugins>
+      
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <configuration>
+          <compilerArgs>
+            <arg>-Xplugin:Manifold</arg>
+          </compilerArgs>
+          <proc>none</proc>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -57,6 +69,7 @@
           <reuseForks>false</reuseForks>
         </configuration>
       </plugin>
+      
     </plugins>
   </build>
 
