--- a/circle.yml
+++ b/circle.yml
@@ -26,7 +26,17 @@ general:
 
 test:
   override:
-    - mvn -B integration-test deploy -s settings.xml
+    # Only executes tests
+    - mvn surefire:test -B
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+
+deployment:
+  snapshots:
+    # Applies to all branches not beginning with 'rel/'
+    branch: /^(?!rel\/).+/
+    commands:
+      # 'deploy' ordinarily ensured everything is up-to-date, but mvn's incremental compiler doesn't work well with Gosu
+      # therefore we skip test compilation entirely and rely on the JARs built by 'mvn install'
+      - ./ci_scripts/deploy_snapshot.sh
