Add OJO as additional source of snapshots

--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -51,6 +51,17 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>snapshots</id>
+      <name>libs-snapshot</name>
+      <url>https://oss.jfrog.org/artifactory/libs-snapshot</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <distributionManagement>
