--- a/gosu-maven-compiler/pom.xml
+++ b/gosu-maven-compiler/pom.xml
@@ -26,36 +26,28 @@
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-compiler-api</artifactId>
-      <version>2.5</version>
+      <artifactId>plexus-compiler-javac</artifactId>
+      <version>2.8.2</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-compiler-test</artifactId>
-      <version>2.5</version>
+      <version>2.8.2</version>
       <scope>test</scope>
     </dependency>
+    <!-- TODO convert to style of: http://svn.apache.org/viewvc/maven/plugins/tags/maven-compiler-plugin-3.7.0/src/test/java/org/apache/maven/plugin/compiler/CompilerMojoTestCase.java?revision=1806958&view=markup -->
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-container-default</artifactId>
       <version>1.0-alpha-9-stable-1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>${maven.compiler.version}</version>
+    </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <groupId>org.apache.maven.plugins</groupId>
-        <configuration>
-          <compilerArgs>
-            <arg>-Xplugin:Manifold</arg>
-          </compilerArgs>
-          <proc>none</proc>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
