--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -35,35 +35,20 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <compilerArgs>
-            <arg>-Xplugin:Manifold</arg>
-          </compilerArgs>
           <proc>none</proc>
-        </configuration>
-        <executions>
-          <execution>
-            <id>Compile Gosu test sources</id>
-            <phase>test-compile</phase>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-            <configuration>
               <compilerId>gosuc</compilerId>
               <fork>true</fork>
               <meminitial>1024m</meminitial>
               <maxmem>2048m</maxmem>
               <compilerArgs>
-                <arg>-DcheckedArithmetic=true</arg>
-                <!--<arg>-Xdebug</arg>-->
-                <!-- windows -->
-                <!--<arg>-Xrunjdwp:transport=dt_shmem,address=gosuc,server=y,suspend=y</arg> -->
-                <!-- linux/OS X -->
-                <!--<arg>-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y</arg>-->
+                <arg>-J-DcheckedArithmetic=true</arg>
+                <!-- debug -->
+                <!--<arg>-J-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005</arg>-->
               </compilerArgs>
               <showWarnings>false</showWarnings>
-              <useIncrementalCompilation>true</useIncrementalCompilation> <!-- this must be true or else we cannot pick up files with multiple extensions -->
-              <verbose>true</verbose>
+              <verbose>false</verbose>
               <testIncludes>
+                <include>**/*.java</include>
                 <include>**/*.gs</include>
                 <include>**/*.gsx</include>
                 <include>**/*.gst</include>
@@ -76,8 +61,6 @@
                 <exclude>**/Errant_*.gsp</exclude>
               </testExcludes>
             </configuration>
-          </execution>
-        </executions>
         <dependencies>
           <dependency>
             <groupId>org.gosu-lang.gosu</groupId>
