--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -23,6 +23,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+      <version>2.6.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.gosu-lang.gosu.managed</groupId>
       <artifactId>gw-asm-all</artifactId>
       <version>5.0.4</version>
