--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -25,12 +25,22 @@
     <dependency>
       <groupId>org.gosu-lang.gosu.managed</groupId>
       <artifactId>gw-asm-all</artifactId>
-      <version>5.0.4</version>
+      <version>6.2</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu.managed</groupId>
       <artifactId>gw-jcommander</artifactId>
       <version>1.72</version>
+    </dependency>
+    <dependency>
+      <groupId>systems.manifold</groupId>
+      <artifactId>manifold</artifactId>
+      <version>0.26-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>systems.manifold</groupId>
+      <artifactId>manifold-ext</artifactId>
+      <version>0.26-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
