--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -35,35 +35,15 @@
     <dependency>
       <groupId>systems.manifold</groupId>
       <artifactId>manifold</artifactId>
-      <version>0.26-SNAPSHOT</version>
+      <version>0.26-alpha</version>
     </dependency>
     <dependency>
       <groupId>systems.manifold</groupId>
       <artifactId>manifold-ext</artifactId>
-      <version>0.26-SNAPSHOT</version>
+      <version>0.26-alpha</version>
     </dependency>
   </dependencies>
-  
-  <profiles>
-    <profile>
-        <id>internal.tools-jar</id>
-        <activation>
-            <file>
-                <exists>${java.home}/../lib/tools.jar</exists>
-            </file>
-        </activation>
-        <dependencies>
-            <dependency>
-                <groupId>com.sun</groupId>
-                <artifactId>tools</artifactId>
-                <version>1.8.0</version>
-                <scope>system</scope>
-                <systemPath>${java.home}/../lib/tools.jar</systemPath>
-            </dependency>
-        </dependencies>
-    </profile>
-  </profiles>
-  
+
   <build>
     <plugins>
       <plugin>
