remove manifold-ext as, for now, we only need core manifold

--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -35,13 +35,13 @@
     <dependency>
       <groupId>systems.manifold</groupId>
       <artifactId>manifold</artifactId>
-      <version>0.26-alpha</version>
+      <version>0.39-alpha</version>
     </dependency>
-    <dependency>
-      <groupId>systems.manifold</groupId>
-      <artifactId>manifold-ext</artifactId>
-      <version>0.26-alpha</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>systems.manifold</groupId>-->
+      <!--<artifactId>manifold-ext</artifactId>-->
+      <!--<version>0.35-SNAPSHOT</version>-->
+    <!--</dependency>-->
   </dependencies>
 
   <build>
