--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       TERM: dumb
       MAVEN_OPTS: "-Xmx1024m"
     docker:
-      - image: circleci/java:8
+      - image: circleci/openjdk:11-jdk
     branches:
       ignore:
         - /rel\/.*/
