--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.gosu-lang.gosu</groupId>
   <artifactId>gosu-parent</artifactId>
-  <version>1.14.14-SNAPSHOT</version>
+  <version>1.14.14</version>
   <packaging>pom</packaging>
 
   <name>Gosu :: Parent POM</name>
@@ -30,7 +30,7 @@
     <connection>${scm.root}/gosu-lang.git</connection>
     <developerConnection>${scm.root}/gosu-lang.git</developerConnection>
     <url>https://github.com/gosu-lang/gosu-lang</url>
-    <tag>HEAD</tag>
+    <tag>v1.14.14</tag>
   </scm>
 
   <properties>
