--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>systems.manifold</groupId>
       <artifactId>manifold</artifactId>
-      <version>0.65-SNAPSHOT</version>
+      <version>0.68-alpha</version>
     </dependency>
   </dependencies>
 
