https://guidewirejira.atlassian.net/browse/ISSTUDIO-442 - Override the base class to filter out the intellij classpath jar because WindowsPathParser otherwise chokes on the jre paths having an illegal '!' character in them.  Note this is a total hack and should be fixed on the Studio end, but fixing this on the Gosu side for now

--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>systems.manifold</groupId>
       <artifactId>manifold</artifactId>
-      <version>2019.1.0-gw</version>
+      <version>2019.1.4</version>
     </dependency>
   </dependencies>
 
