Initial changes to support *both* Java 8 and later JVMs (currently up to and including Java 11). - Gosu itself (gosu-core, gosu-core-api, etc.) builds exclusively with a Java 8 JDK - Gosu compiles, executes, and dynamically loads/compiles both Gosu and Java sources while running in any standard Java 8 or later VM - The Gosu compiler generates Java 8 bytecode exclusively, regardless of the version of the hosting JVM - Gosu interoperates with Java classes compiled with Java 8 or later (bytecode versions 52-55) - All Gosu tests pass in both Java 8 and 11 VMs

--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -25,12 +25,17 @@
     <dependency>
       <groupId>org.gosu-lang.gosu.managed</groupId>
       <artifactId>gw-asm-all</artifactId>
-      <version>5.0.4</version>
+      <version>7.0</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu.managed</groupId>
       <artifactId>gw-jcommander</artifactId>
       <version>1.72</version>
+    </dependency>
+    <dependency>
+      <groupId>systems.manifold</groupId>
+      <artifactId>manifold</artifactId>
+      <version>2019.1.12</version>
     </dependency>
   </dependencies>
   
