--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -34,6 +34,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
         <executions>
           <execution>
             <id>Compile Gosu test sources</id>
