--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.gosu-lang.gosu</groupId>
   <artifactId>gosu-parent</artifactId>
-  <version>1-X-SNAPSHOT</version>
+  <version>1.14.15-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Gosu :: Parent POM</name>
