- Gosu now fully interoperates with Java using Manifold, thus Gosu can be used alongside Java and compiled via Java's compiler (javac) using the -Xplugin:Manifold argument to enable Manifold in javac and using the -Aother.source.files or -Aother.source.list arguments to include Gosu sources - Gosu can use existing Manifold features Java extension methods and GraphQL, JSON, and XML support - Internally Gosu taps into javac's type system to share type information, which may improve compilation performance in projects that have a fair amount of both Gosu and Java sources and share a lot of Java libs between them

--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -34,8 +34,8 @@
     </dependency>
     <dependency>
       <groupId>systems.manifold</groupId>
-      <artifactId>manifold</artifactId>
-      <version>2019.1.12</version>
+      <artifactId>manifold-ext</artifactId>
+      <version>2020.1.4-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
