--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>gosu-maven-compiler</module>
     <module>gosu-parent</module>
     <module>gosu-test</module>
+    <module>gosu-javac-test</module>
     <module>gosu-test-api</module>
   </modules>
 
