- support self proxies and registered proxies from manifold for improved structural interface support - added more tests including some initial GraphQL tests to verify structural typing support from Gosu

--- a/gosu-javac-test/pom.xml
+++ b/gosu-javac-test/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>gosu-core-api-precompiled</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>systems.manifold</groupId>
+      <artifactId>manifold-graphql</artifactId>
+      <version>2020.1.4-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
