changes to support Manifold's recent resource type / Java interop in a Java 9+ environment, including multi-module projects

--- a/gosu-javac-test/pom.xml
+++ b/gosu-javac-test/pom.xml
@@ -46,6 +46,7 @@
             <arg>-Xplugin:Manifold</arg>
             <!-- Test static Gosu compilation with javac command line, apply a contrived regex to test -->
             <arg>-Amanifold.source.gs=^.*\.(GosuExtendsJavaBase|MyUnreferencedGosuClass|Dummy|InteropTest)$</arg>
+            <arg>-Amanifold.source.graphql=.*</arg>
           </compilerArgs>
         </configuration>
       </plugin>
