Fix javadoc break

--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -106,9 +106,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.9</version>
+          <version>3.1.1</version>
           <configuration>
             <encoding>UTF-8</encoding>
+            <doclint>none</doclint>
+            <excludePackageNames>gw.internal.gosu.*:gw.gosudoc.*</excludePackageNames>
           </configuration>
         </plugin>
         <plugin>
@@ -199,9 +201,10 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.9.1</version>
+            <version>3.1.1</version>
             <configuration>
-              <additionalparam>-Xdoclint:none</additionalparam>
+              <doclint>none</doclint>
+              <excludePackageNames>gw.internal.gosu.*:gw.gosudoc.*</excludePackageNames>
             </configuration>
             <executions>
               <execution>
